--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+    <!-- GOLF COURSE BACKGROUND IMAGES - GUARANTEED TO WORK -->
+    <div class="golf-bg-left"></div>
+    <div class="golf-bg-right"></div>
+    
     <!-- Header -->
     <header class="header">
         <div class="container">
